# Assignment-2-Packaged-Application-with-uv

./: README.md
my-package-app/: pyproject.toml
my-package-app/src/my_package_app/: __init__.py  main.py
