[project]
name = "my-package-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "salmanbhatti87", email = "114308008+salmanbhatti87@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
my-package-app = "my_package_app:main"           # Runs main() from __init__.py
my-package-app-main = "my_package_app.main:main" # Runs main() from main.py

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "ruff>=0.12.11",
]
